# DevWhisp

./: .gitignore  README.md  REVIEW_inference_ui.md  index.html  package-lock.json  package.json  pill.html  vite.config.ts
design/: preview.html  render_voicewaves_icon.py  verify_exe_icons.py
docs/: BUILDING.md
installers/: copy-installers.cmd
plans/: DevWhisp-Plan.md  DevWhisp-Tasks.json
scripts/: apply_new_icon.py  ensure-model.mjs  verify-installer.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  pill.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hotkey.rs  ipc.rs  lib.rs  main.rs  tray.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampler.rs  vad.rs  visualizer.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/formatter/: mod.rs
src-tauri/src/history/: db.rs  mod.rs  types.rs
src-tauri/src/inject/: clipboard.rs  formatter.rs  keystroke.rs  mod.rs
src-tauri/src/pill/: ipc.rs  mod.rs
src-tauri/src/stt/: mod.rs  model_manager.rs  moonshine.rs  whisper.rs
src-tauri/src/window/: mod.rs  pill_window.rs
src/lib/: AppIcon.svelte  BrandMark.svelte  Dashboard.svelte  DownloadProgressBanner.svelte  History.svelte  NavIcon.svelte  OnboardingWizard.svelte  Pill.main.ts  Pill.svelte  Settings.svelte  api.ts  downloadStore.svelte.ts
